# reservation

./: .env.example  Makefile  README.md  deny.toml
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/fixtures/: config.yml
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs  pager.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_filter.rs  reservation_query.rs  reservation_status.rs
migrations/: 20221024151806_init.down.sql  20221024151806_init.up.sql  20221024151848_reservation.down.sql  20221024151848_reservation.up.sql  20221024151918_reservation_trigger.down.sql  20221024151918_reservation_trigger.up.sql  20221024151949_reservation_function.down.sql  20221024151949_reservation_function.up.sql
reservation/: Cargo.toml
reservation/examples/: listen.rs
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0000-core-reservation.md  0001-listener.md  template.md
rfcs/excalidraws/: arch.excalidraw  core-flow.excalidraw  listener.excalidraw  overlapping.excalidraw
service/: Cargo.toml
service/src/: lib.rs  main.rs  service.rs
service/tests/: service.rs
