[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
prost = "0.11.0"
prost-types = "0.11.1"
tonic = { version = "0.8.2", features = ["gzip"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.37"
regex = "1.5"
derive_builder = "0.11.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"

[build-dependencies]
tonic-build = "0.8.2"
