[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.66"
futures = { version = "0.3.25", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
serde = { version = "1.0.147", features = ["derive"] }
serde_yaml = "0.9.14"
shellexpand = "2.1.2"
tokio = { version = "1.22.0", features = ["full"] }
tonic = { version = "0.8.2", features = ["tokio-rustls", "gzip"] }
